--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node scripts/seed.ts",
-    "export": "next export" 
+    "export": "next export"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
@@ -16,15 +16,18 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "mongoose": "^8.6.0",
     "next": "14.2.7",
     "puppeteer": "^23.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
