--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
